# ryx-ai

./: .gitignore  .ryx.repo.json  ANALYSIS_SUMMARY.md  AUTONOMOUS_IMPROVEMENT.md  BACKEND_INTEGRATION_SUMMARY.md  CACHE_FIX_ZUSAMMENFASSUNG.md  CHANGELOG.md  CLAUDE_QUICK_START.md  COMPREHENSIVE_TEST_RESULTS.md  CONVENTIONS.md  ENHANCEMENT_SUMMARY.md  EVALUATION_SUMMARY.md  EXAM_SESSION_SUMMARY.md  EXAM_SYSTEM_150_COMPLETE.md  EXAM_SYSTEM_IMPLEMENTATION.md  EXTRACTION_PLAN.md  FINAL_SESSION_SUMMARY.md  FINAL_TEST_REPORT.md  FIXES_APPLIED.md  FIXES_IMPLEMENTED.md  GMAIL_OAUTH_COMPLETE.md  GMAIL_QUICKSTART.md  HANDOFF.md  HANDOFF_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_LOG.md  INSTALLATION_SUMMARY.md  INTENT_PARSER_FIXES.md  MISSION.md  OLLAMA_MIGRATION.md  PHASE_1_FEEDBACK.md  PHASE_2_COMPLETE.md  PHOENIX_PROTOCOL.md  PROJECT_SUMMARY.md  QUICK_START.md  RAG_QUICKSTART.md  README.md  REDESIGN_NEEDED.md  RSI_IMPROVEMENT_PLAN.md  (+75 more)
.claude/: CONTEXT.md
.github/: copilot-instructions.md
.ryx.backups/: actions.py.20251208_184412.bak  actions.py.20251208_185706.bak  actions.py.20251208_190043.bak  actions.py.20251208_191740.bak  actions.py.20251208_192101.bak  actions.py.20251208_192137.bak  actions.py.20251208_193117.bak  actions.py.20251208_193153.bak  actions.py.20251208_193428.bak  actions.py.20251208_193817.bak  actions.py.20251208_193904.bak  actions.py.20251208_194438.bak  actions.py.20251208_194549.bak  actions.py.20251208_202042.bak  actions.py.20251208_202347.bak  actions.py.20251208_203140.bak  actions.py.20251208_203430.bak  actions.py.20251208_203510.bak  actions.py.20251208_203612.bak  actions.py.20251208_203753.bak  actions.py.20251208_203909.bak  actions.py.20251208_204011.bak  actions.py.20251208_205539.bak  actions.py.20251208_210011.bak  agent.py.20251208_193400.bak  autonomous_brain.py.20251210_165648.bak  benchmark.py.20251210_170654.bak  benchmark.py.20251210_172244.bak  benchmark.py.20251210_172457.bak  benchmark.py.20251210_192314.bak  benchmark.py.20251210_192434.bak  benchmark.py.20251210_192449.bak  benchmark.py.20251210_192639.bak  benchmark.py.20251210_193501.bak  benchmark.py.20251210_194256.bak  benchmark.py.20251210_194350.bak  benchmark.py.20251210_194409.bak  benchmark.py.20251210_194424.bak  benchmark.py.20251210_194510.bak  benchmark.py.20251210_194848.bak  (+25 more)
artifacts/: main_sha.txt  pip_freeze.txt  report_pytest.xml
configs/: commands.json  model_routing.json  model_tiers.json  models.json  models_v2.json  permissions.json  ryx_config.json  safety.json  settings.json
core/: __init__.py  agent_tools.py  ai_engine.py  ai_engine_v1_backup.py  ai_engine_v2.py  ai_interpreter.py  auto_context.py  autonomous_brain.py  cli_ui.py  (+77 more)
ryxsurf/: BUILD_STATUS.md  DEVELOPMENT.md  FEATURES.md  FIXED.md  Makefile  PROGRESS.md  README.md  __init__.py  config.default.json  dev_context.py  keybinds.py  keybinds.py.bak  launch.sh  main.py  main_adw.py  main_optimized.py  pyproject.toml  quick_rebuild.sh  rebuild.sh  ryxsurf_fast
ryxsurf-cpp/: BUGFIXES.md  BUILD_STATUS.md  CONTINUATION_PLAN.md  INSTALL_SUMMARY.md  PROGRESS.md  QUICK_START.md  README.md  SESSION_REPORT.md  VERIFICATION_CHECKLIST.md  build-instructions.md  meson.build  plan.md  repo-tree.txt  ryxsurf.desktop
ryxsurf-cpp/data/: theme-gtk4.css  theme.css  theme.css.backup
ryxsurf-cpp/docs/: DESIGN_SYSTEM.md
ryxsurf-cpp/include/: browser_window.h  crypto.h  keyboard_handler.h  password_manager.h  persistence_manager.h  session.h  session_manager.h  snapshot_manager.h  tab.h  tab_unload_manager.h  theme_manager.h  workspace.h
ryxsurf-cpp/patches/: 0001-poC-minimal-GTK4-WebKit-app-keyboard-nav.patch  0002-docs-Add-README-build-instructions-and-development-p.patch  0003-core-data-model-structs-session-manager.patch  0004-perf-tab-unload-restore-snapshot.patch  0005-docs-Add-progress-tracking-document.patch  0006-persist-encrypted-sqlite-autosave.patch  0007-docs-Update-progress-Milestone-6-complete.patch  0008-security-password-manager-libsecret-fallback.patch  0009-docs-Update-progress-Milestone-7-complete.patch  0010-ui-css-animations.patch  0011-docs-Update-progress-Milestone-9-complete.patch  0012-docs-Add-continuation-plan-and-quick-start-guide.patch  0013-fix-security-and-correctness-bugs.patch  0014-docs-Add-bugfixes-documentation.patch
ryxsurf-cpp/perf/: run_perf.sh
ryxsurf-cpp/src/: browser_window.cpp  crypto.cpp  keyboard_handler.cpp  main.cpp  password_manager.cpp  persistence_manager.cpp  session.cpp  session_manager.cpp  snapshot_manager.cpp  tab.cpp  tab_unload_manager.cpp  theme_manager.cpp  workspace.cpp
ryxsurf-cpp/tests/: test_password_manager.cpp  test_persistence.cpp  test_session_manager.cpp  test_tab.cpp  test_unload.cpp
ryxsurf/configs/: commands.json
ryxsurf/src/: __init__.py  cli.py
ryxsurf/src/ai/: __init__.py  actions.py  actions.py.bak  agent.py  agent.py.bak  browser_agent.py  vision.py
ryxsurf/src/core/: __init__.py  auto_update.py  bookmarks.py  browser.py  browser.py.bak  browser_adw.py  browser_fast.py  config.py  container_tabs.py  downloads.py  force_dark.py  gpu_accel.py  health_check.py  history.py  instant_load.py  keybinds.py  lazy_loader.py  memory.py  memory_compress.py  parallel_downloads.py  perf_monitor.py  performance.py  prefetch.py  reader_mode.py  resource_limiter.py  sessions.py  settings_manager.py  shortcuts.py  split_view.py  startup_optimizer.py  tab_groups.py  tab_hibernation.py  turbo_mode.py
ryxsurf/src/extensions/: __init__.py  loader.py  manager.py
ryxsurf/src/features/: __init__.py  advanced_settings.py  autofill.py  comprehensive_features.py  passwords.py  pdf.py  settings.py  split_view.py  tab_groups.py
ryxsurf/src/sessions/: __init__.py  manager.py
ryxsurf/src/sync/: __init__.py
ryxsurf/src/ui/: __init__.py  advanced_tab_manager.py  ai_sidebar.py  bar.py  bookmarks_bar.py  command_palette.py  comprehensive_settings_ui.py  context_menu.py  dashboard.py  find_bar.py  hints.py  settings_panel.py  tab_bar.py  tabs.py  theme.py
ryxsurf/tests/: test_performance.py  test_ryxsurf.py
(+995 files in other folders)
