[project]
name = "ryx-ai"
version = "1.0.0"
description = "Ryx AI - Local agentic CLI for Arch Linux"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "cli", "ollama", "llm", "agentic"]
authors = [
    {name = "Tobi"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ryx = "ryx_main:cli_main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modes*", "tools*", "ryx*", "ryx_core*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.md"]
