[project]
name = "ryxsurf"
version = "0.1.0"
description = "AI-Integrated Minimalist Browser for Hyprland"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tobi"}
]
keywords = ["browser", "ai", "webkit", "gtk", "hyprland"]

dependencies = [
    "PyGObject>=3.46.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ryxsurf = "ryxsurf.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ryxsurf*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
